fix selected tokens visible

--- a/abovevtt.css
+++ b/abovevtt.css
@@ -1220,17 +1220,18 @@ div#combat_button{
 }
 
 
-.tokenselected::before{
+.tokenselected::before {
     content: "";
     position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+    top: -7px;
+    left: -7px;
+    right: -7px;
+    bottom: -7px;
     border-radius: 0px;
     padding: 5px;
     border: 5px #c0f3fff5 solid;
     z-index: 0;
+    border-radius: 5px;
     pointer-events: none;
 }
 
